--- a/opgroeiing.html
+++ b/opgroeiing.html
@@ -58,7 +58,8 @@
       <li class="footer-text"><a class="footer-links" target="_blank"
           href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
           and Examination Regulations</a></li>
-      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation Regulations
+      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation
+          Regulations
           HBO-ICT</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank"
