--- a/dashboard.html
+++ b/dashboard.html
@@ -29,117 +29,113 @@
   <main>
     <h1>Dashboard</h1>
     <table class="schema">
-      <tr>
+      <tr style="background-color: white;">
         <th>Quarter</th>
         <th>Course</th>
         <th>Examens</th>
         <th>Behaalbare Studiepunten</th>
         <th>Behaalde Studiepunten</th>
-        <th>Cursus Status</th>
       </tr>
-      <tr>
+      <tr class="bezig">
         <td rowspan="3">Blok 1</td>
         <td>Program- &amp; Career Orientation</td>
         <td>Portfolio website presentation</td>
         <td>2.5 EC</td>
         <td>n.t.b.</td>
-        <td>Bezig</td>
       </tr>
-      <tr>
+      <tr class="bezig">
         <td>Computer Science Basics</td>
         <td>Written Exam</td>
         <td>5 EC</td>
         <td>n.t.b.</td>
-        <td>Bezig</td>
       </tr>
-      <tr>
+      <tr class="bezig">
         <td>Programming Basics</td>
         <td>Practical Assignment</td>
         <td>5 EC</td>
         <td>n.t.b.</td>
-        <td>Bezig</td>
       </tr>
-      <tr>
-        <td rowspan="3">Blok 2</td>
-        <td>...</td>
-        <td>Written Exam</td>
-        <td>12,5 EC</td>
-        <td>n.t.b.</td>
-      </tr>
-      <tr>
+      <tr class="niet-gestart">
+        <td rowspan="2">Blok 2</td>
         <td rowspan="2">Object Oriented Programming</td>
-        <td>Project</td>
+        <td>Presentation</td>
         <td>5 EC</td>
         <td>n.t.b.</td>
       </tr>
-      <tr>
-        <td>aa</td>
-        <td>aa</td>
-        <td>aa</td>
-        
-
-
-      </tr>
-      <tr>
-        <td>Database Systems</td>
-        <td>Practical Assignment</td>
-        <td>2.5 EC</td>
-        <td>n.t.b.</td>
-      </tr>
-      <tr>
-        <td rowspan="3">Blok 3</td>
-        <td>Software Engineering</td>
-        <td>Project</td>
-        <td>5 EC</td>
-        <td>n.t.b.</td>
-      </tr>
-      <tr>
-        <td>Algorithms</td>
+      <tr class="niet-gestart">
         <td>Written Exam</td>
         <td>5 EC</td>
         <td>n.t.b.</td>
       </tr>
-      <tr>
-        <td>Operating Systems</td>
-        <td>Practical Assignment</td>
+      <tr class="niet-gestart">
+        <td rowspan="4">Blok 3</td>
+        <td>Business IT Consultancy Basics</td>
+        <td>Individual Assignment</td>
         <td>2.5 EC</td>
         <td>n.t.b.</td>
       </tr>
-      <tr>
+      <tr class="niet-gestart">
+        <td rowspan="3">Framework Project 1</td>
+        <td>Written Exams</td>
+        <td>5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr class="niet-gestart">
+        <td>Group Presentation</td>
+        <td>2.5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr class="niet-gestart">
+        <td>Group Portfolio</td>
+        <td>2.5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr class="niet-gestart">
         <td rowspan="3">Blok 4</td>
-        <td>Networks</td>
-        <td>Written Exam</td>
+        <td rowspan="3">Framework Project 2</td>
+        <td>Presentation</td>
         <td>5 EC</td>
-        <td>n.t.b.</td>
+        <td><input type="text" id="presentation" value="n.t.b."></td>
       </tr>
-      <tr>
-        <td>Security</td>
-        <td>Project</td>
-        <td>5 EC</td>
-        <td>n.t.b.</td>
-      </tr>
-      <tr>
-        <td>Cloud Computing</td>
-        <td>Practical Assignment</td>
+      <tr class="niet-gestart">
+        <td>Portfolio</td>
         <td>2.5 EC</td>
-        <td>n.t.b.</td>
+        <td><input type="text" id="portfolio" value="n.t.b."></td>
       </tr>
-      <tr>
+      <tr class="niet-gestart">
+        <td>IT Development Portfolio</td>
+        <td>2.5 EC</td>
+        <td><input type="text" id="it_dev_portfolio" value="n.t.b."></td>
+      </tr>
+      <tr class="niet-gestart">
         <td rowspan="2">Heel het jaar</td>
         <td>IT Personality</td>
-        <td>Final Presentation</td>
-        <td>10 EC</td>
-        <td>n.t.b.</td>
+        <td> </td>
+        <td>2.5 EC</td>
+        <td><input type="text" id="it_personality" value="n.t.b."></td>
       </tr>
-      <tr>
+      <tr class="niet-gestart">
         <td>Personal Professional Development: Exploration</td>
+        <td>Portfolio</td>
+        <td>12.5 EC</td>
+        <td><input type="text" id="ppd_exploration" value="n.t.b."></td>
+      </tr>
+      <tr id="totaal-box" style="background-color: white;">
+        <td><strong>Totaal</strong></td>
         <td>---</td>
         <td>---</td>
-        <td>---</td>
-        <td>---</td>
+        <td>60 EC</td>
+        <td id="total">0 EC</td>
       </tr>
     </table>
-    <style></style>
+    <!-- Kleur INDEX -->
+    <div class="color-index">
+      <ul>
+        <li><span class="color-box" style="background-color: yellow;"></span> In Progress</li>
+        <li><span class="color-box" style="background-color: lightgray;"></span> Not Started</li>
+        <li><span class="color-box" style="background-color: lightgreen;"></span> Completed</li>
+      </ul>
+    </div>
   </main>
 </body>
 
@@ -160,5 +156,32 @@
     </ul>
   </div>
 </footer>
+
+<script>
+  function calculateTotal() {
+    const inputs = document.querySelectorAll('input[type="text"]');
+    let total = 0;
+
+    inputs.forEach(input => {
+      const value = input.value.trim();
+      if (value && value !== 'n.t.b.') {
+        const ec = parseFloat(value.replace(' EC', ''));
+        if (!isNaN(ec)) {
+          total += ec;
+        }
+      }
+    });
+
+    const totalElement = document.getElementById('total');
+    totalElement.textContent = total > 0 ? `${total} EC` : '';
+  }
+
+  document.querySelectorAll('input[type="text"]').forEach(input => {
+    input.addEventListener('input', calculateTotal);
+  });
+
+  // Initial calculation
+  calculateTotal();
+</script>
 
 </html>
