--- a/dashboard.html
+++ b/dashboard.html
@@ -41,84 +41,84 @@
         <td>Program- &amp; Career Orientation</td>
         <td>Portfolio website presentation</td>
         <td>2.5 EC</td>
-        <td><input type="text" id ="portfolio"></td>
+        <td><input type="text" id="pco"></td>
       </tr>
       <tr class="bezig">
         <td>Computer Science Basics</td>
         <td>Written Exam</td>
         <td>5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="cs"></td>
       </tr>
       <tr class="bezig">
         <td>Programming Basics</td>
         <td>Practical Assignment</td>
         <td>5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="pb"></td>
       </tr>
       <tr class="niet-gestart">
         <td rowspan="2">Blok 2</td>
         <td rowspan="2">Object Oriented Programming</td>
         <td>Presentation</td>
         <td>5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="OOP"></td>
       </tr>
       <tr class="niet-gestart">
         <td>Written Exam</td>
         <td>5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="WE"></td>
       </tr>
       <tr class="niet-gestart">
         <td rowspan="4">Blok 3</td>
         <td>Business IT Consultancy Basics</td>
         <td>Individual Assignment</td>
         <td>2.5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="BICB"></td>
       </tr>
       <tr class="niet-gestart">
         <td rowspan="3">Framework Project 1</td>
         <td>Written Exams</td>
         <td>5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="FP1"></td>
       </tr>
       <tr class="niet-gestart">
         <td>Group Presentation</td>
         <td>2.5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="GP"></td>
       </tr>
       <tr class="niet-gestart">
         <td>Group Portfolio</td>
         <td>2.5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="GPo"></td>
       </tr>
       <tr class="niet-gestart">
         <td rowspan="3">Blok 4</td>
         <td rowspan="3">Framework Project 2</td>
         <td>Presentation</td>
         <td>5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="FP2"></td>
       </tr>
       <tr class="niet-gestart">
         <td>Portfolio</td>
         <td>2.5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="Po"></td>
       </tr>
       <tr class="niet-gestart">
         <td>IT Development Portfolio</td>
         <td>2.5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="IDPo"></td>
       </tr>
       <tr class="niet-gestart">
         <td rowspan="2">Heel het jaar</td>
         <td>IT Personality</td>
         <td> </td>
         <td>2.5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="IP"></td>
       </tr>
       <tr class="niet-gestart">
         <td>Personal Professional Development: Exploration</td>
         <td>Portfolio</td>
         <td>12.5 EC</td>
-        <td><input type="text"></td>
+        <td><input type="text" id="PPD"></td>
       </tr>
       <tr id="totaal-box" style="background-color: white;">
         <td><strong>Totaal</strong></td>
